# cli_catch_AppStore_review_and_kaizen

./: .env.example  .gitignore  CHANGELOG.md  DECISIONS.md  LICENSE  README.md  appreview.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: how-to-find-app-id.md  prompt-customization.md  setup-app-store.md  setup-google-play.md
src/appreview/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging.py
src/appreview/analysis/: __init__.py  classifier.py  clusterer.py  language.py  pii.py
src/appreview/llm/: __init__.py  anthropic_provider.py  base.py  cost.py  ollama_provider.py  openai_provider.py
src/appreview/prompts/: classify.md  suggest.md
src/appreview/report/: __init__.py  json_output.py  markdown.py
src/appreview/sources/: __init__.py  app_store.py  base.py  google_play.py  jwt_helper.py
src/appreview/storage/: __init__.py  migrations.py  models.py  repository.py
tests/: __init__.py  conftest.py
tests/fixtures/: app_store_response.json  google_play_response.json
tests/integration/: test_e2e_dry_run.py  test_live.py  test_pipeline.py
tests/unit/: test_app_store_parser.py  test_config.py  test_cost.py  test_google_play_parser.py  test_jwt_helper.py  test_pii.py  test_rate_limiter.py  test_report_snapshot.py  test_reports.py
tests/unit/__snapshots__/: test_report_snapshot.ambr
