[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appreview-insight"
version = "0.1.0"
description = "CLI tool to fetch, analyze, and report on mobile app reviews using LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "appreview-insight contributors" },
]
keywords = ["app-store", "google-play", "reviews", "llm", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.19",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "pyjwt[crypto]>=2.8",
  "google-auth>=2.0",
  "lingua-language-detector>=2.0",
  "jinja2>=3.1",
  "structlog>=24.0",
  "openai>=1.0",
  "anthropic>=0.25",
  "rich>=13.0",
  "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "syrupy>=4.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "coverage>=7.0",
  "pytest-cov>=5.0",
  "types-pyyaml",
  "types-jinja2",
]

[project.scripts]
appreview = "appreview.cli:app"

[project.urls]
Homepage = "https://github.com/<owner>/appreview-insight"
Repository = "https://github.com/<owner>/appreview-insight"
Issues = "https://github.com/<owner>/appreview-insight/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/appreview"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ANN", # flake8-annotations
  "S",   # bandit
  "RUF", # ruff-specific
]
ignore = [
  "ANN101",  # Missing type annotation for `self`
  "ANN102",  # Missing type annotation for `cls`
  "S101",    # Use of `assert` detected (pytest tests)
  "S105",    # Possible hardcoded password (false positives in tests)
  "S106",    # Possible hardcoded password
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S", "E501"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/appreview"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "lingua.*",
  "google.auth.*",
  "google.oauth2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: marks tests as requiring real API credentials (deselect with '-m not live')",
  "unit: marks tests as unit tests",
  "integration: marks tests as integration tests",
]
addopts = "-m 'not live'"

[tool.coverage.run]
source = ["src/appreview"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
